# vincul

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  setup.py
apps/agentic_demo/: Dockerfile  __init__.py  deploy.sh  engine.py  langgraph_engine.py  run.py  server.py  strands_engine.py
apps/agentic_demo/scenarios/: __init__.py  term_sheet.py
apps/agentic_demo/static/: index.html
apps/openclaw_demo/: Dockerfile  README.md  demo_server.py  docker-compose.yml  entrypoint.sh  run.sh
apps/openclaw_demo/config/: openclaw.json
apps/openclaw_demo/enforcement_service/: main.py  scenario.py
apps/openclaw_demo/interceptor/: package.json  vincul-interceptor.ts
apps/openclaw_demo/orchestrator/: act1.py  act2.py  act3.py  analyze_llm_log.py  llm_log_proxy.py
apps/openclaw_demo/static/: index.html
apps/server/: broadcast.py  demo_state.py  main.py  websocket.py
apps/server/routes/: actions.py  contract.py  (+2 more)
apps/tool_marketplace/: __init__.py  demo.py  routes.py  spec.md  state.py  vendor_a_agent.py  vendor_b_tool.py
apps/trip_planner/: __init__.py  connectors.py  demo.py  routes.py  state.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
ci/: check_vectors.py
connectors/: __init__.py  base.py  flights.py  hotels.py
pact-spec/: GLOSSARY.md  PHILOSOPHY.md
pact-spec/spec/: README.md
samples/: __init__.py
samples/cross_vendor_tool_marketplace/: __init__.py  demo.py  demo_vinculnet.py  spec.md  vendor_a_agent.py  vendor_b_tool.py
scripts/: verify.sh
src/pact/: __init__.py  budget.py  constraints.py  contract.py  hashing.py  identity.py  interfaces.py  receipts.py  runtime.py  scopes.py  types.py  validator.py
src/vincul/: hashing.py  profiles.py  receipts.py  types.py
tests/: test_budget.py  test_constraints.py  test_contract.py  test_hashing.py  test_profiles.py  test_protocol_peer.py  test_receipts.py  test_runtime.py  test_scopes.py  test_transport.py  test_validator.py
tests/sdk/: test_agent.py  test_context.py  test_decorators.py  test_enforce.py
vincul-spec/: GLOSSARY.md  PHILOSOPHY.md
vincul-spec/spec/: README.md
(+58 files in other folders)
